[gd_scene load_steps=23 format=3 uid="uid://b153tcsd2evxl"]

[ext_resource type="Script" path="res://assets/player/player.gd" id="1_us2ra"]
[ext_resource type="Script" path="res://assets/player/player_input.gd" id="2_lvdns"]
[ext_resource type="PackedScene" uid="uid://5h1ihyi0yj52" path="res://assets/hit area/hit_area.tscn" id="2_qjn1s"]
[ext_resource type="Script" path="res://assets/player/camera/player_camera.gd" id="3_1c552"]
[ext_resource type="PackedScene" uid="uid://dsus5wmlae3f6" path="res://assets/health/health.tscn" id="3_x7he3"]
[ext_resource type="SpriteFrames" uid="uid://cy73tmndqsq8p" path="res://assets/player/sprites/player_anim.tres" id="4_vnf4d"]
[ext_resource type="PackedScene" uid="uid://com86osgfcl14" path="res://assets/player/arm/player_arm.tscn" id="5_1as08"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="5_3vk16"]
[ext_resource type="PackedScene" uid="uid://b1pq4uppopcpp" path="res://assets/rifle/rifle.tscn" id="9_51lrv"]
[ext_resource type="PackedScene" uid="uid://bimpwb3wm0kwk" path="res://assets/pistol/pistol.tscn" id="9_54abd"]
[ext_resource type="Script" path="res://assets/player/Weapons.gd" id="9_esuap"]
[ext_resource type="LabelSettings" uid="uid://dbtpja7fhxm3s" path="res://themes_fonts/team1_label_settings.tres" id="9_s4hwb"]
[ext_resource type="AudioStream" uid="uid://don8s1vauk1g1" path="res://audio/hit_sound.wav" id="12_h514q"]
[ext_resource type="AudioStream" uid="uid://b541dnye2griy" path="res://audio/death_sound.wav" id="13_kend8"]
[ext_resource type="AudioStream" uid="uid://jme71fv3ja8a" path="res://audio/metal_footstep1.wav" id="14_fp4ax"]
[ext_resource type="AudioStream" uid="uid://bi73vhxql427x" path="res://audio/metal_footstep2.wav" id="15_3sjce"]
[ext_resource type="AudioStream" uid="uid://dtrh4il4dp858" path="res://audio/jump_voice.wav" id="16_f6e2y"]
[ext_resource type="AudioStream" uid="uid://bohy4336unb7l" path="res://audio/metal_footstep3.wav" id="16_x6x1o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2vrrx"]
radius = 28.0
height = 147.19

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4n8dl"]
radius = 33.0
height = 145.79

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1iofq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Smoothing2D/AnimatedSprite2D:flip_h")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:player_id")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("Smoothing2D/PlayerLabel:text")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:team_id")
properties/5/spawn = true
properties/5/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2uvcr"]
properties/0/path = NodePath(".:direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:running")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:mouse_from_centre")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("hit_area") groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_us2ra")
jumpVelocity = 13000.0
jumpingTime = 0.1
gravity = 3000
hit_area = NodePath("HitArea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.79)
shape = SubResource("CapsuleShape2D_2vrrx")

[node name="HitArea" parent="." node_paths=PackedStringArray("healt") instance=ExtResource("2_qjn1s")]
healt = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 13.105)
shape = SubResource("CapsuleShape2D_4n8dl")

[node name="Health" parent="." instance=ExtResource("3_x7he3")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1iofq")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="." node_paths=PackedStringArray("mouse_centre")]
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_2uvcr")
script = ExtResource("2_lvdns")
mouse_centre = NodePath("../PlayerMouseCentre")

[node name="JumpingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="UpBufferTimer" type="Timer" parent="."]
wait_time = 0.073
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.193
one_shot = true

[node name="PlayerCamera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
offset = Vector2(0, -88.265)
position_smoothing_enabled = true
position_smoothing_speed = 8.0
script = ExtResource("3_1c552")
maxZoomOut = Vector2(400, 300)
target = NodePath("../PlayerMouseCentre")

[node name="PlayerMouseCentre" type="Marker2D" parent="."]
position = Vector2(0, -6)

[node name="Arm" parent="PlayerMouseCentre" node_paths=PackedStringArray("item_in_hand") instance=ExtResource("5_1as08")]
item_in_hand = NodePath("../../Weapons/Rifle")
arm_lenght = 60.0

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("5_3vk16")
target = NodePath("..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Smoothing2D"]
unique_name_in_owner = true
position = Vector2(4, -17)
scale = Vector2(3.80769, 4.31579)
sprite_frames = ExtResource("4_vnf4d")
animation = &"walk"
autoplay = "idle"
offset = Vector2(-1.2, 0)

[node name="PlayerLabel" type="Label" parent="Smoothing2D"]
offset_left = -93.0
offset_top = -121.0
offset_right = 96.0
offset_bottom = -72.0
text = "Player"
label_settings = ExtResource("9_s4hwb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Weapons" type="Node2D" parent="." node_paths=PackedStringArray("arm", "player_input")]
script = ExtResource("9_esuap")
arm = NodePath("../PlayerMouseCentre/Arm")
player_input = NodePath("../InputSynchronizer")

[node name="Pistol" parent="Weapons" node_paths=PackedStringArray("player_input", "player") instance=ExtResource("9_54abd")]
player_input = NodePath("../../InputSynchronizer")
player = NodePath("../..")
mag_size = 7
ammo_size = 99999999

[node name="Rifle" parent="Weapons" node_paths=PackedStringArray("player_input", "player") instance=ExtResource("9_51lrv")]
player_input = NodePath("../../InputSynchronizer")
player = NodePath("../..")
mag_size = 30
ammo_size = 99999999
fire_rate_delay = 0.125

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_h514q")
volume_db = -3.748
max_polyphony = 10

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_kend8")
volume_db = -13.653

[node name="StepSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_fp4ax")
volume_db = -6.558

[node name="StepSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_3sjce")
volume_db = -6.558

[node name="StepSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_x6x1o")
volume_db = -6.558
panning_strength = 10.0

[node name="JumpVoiceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_f6e2y")

[connection signal="health_zero" from="Health" to="." method="_on_health_health_zero"]
[connection signal="timeout" from="JumpingTimer" to="." method="_on_jumping_timer_timeout"]
[connection signal="timeout" from="UpBufferTimer" to="." method="_on_up_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="frame_changed" from="Smoothing2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="ammo_changed" from="Weapons/Rifle" to="Weapons/Rifle" method="_on_ammo_changed"]
